--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,6 @@
 <project name="HelloWorld" basedir="." default="main">
     <property name="src.dir"     value="src"/>
+    <property name="test.dir"     value="test"/>
     <property name="lib.dir"     value="lib"/>
     <property name="build.dir"   value="build"/>
     <property name="classes.dir" value="${build.dir}/classes"/>
@@ -7,9 +8,8 @@
     <property name="main-class"  value="com.klab.lai.HelloWorld"/>
     <path id="classpath">
         <fileset dir="${lib.dir}" includes="**/*.jar" />
-        <fileset dir="." includes="*.properties" />
     </path>
-
+    <path id="application" location="${jar.dir}/${ant.project.name}.jar"/>
     <target name="clean">
         <delete dir="${build.dir}"/>
     </target>
@@ -34,7 +34,18 @@
             </manifest>
         </jar>
     </target>
+    <target name="test" depends="jar">
+        <junit printsummary="yes">
+            <classpath>
+                <path refid="classpath"/>
+                <path refid="application"/>
+            </classpath>
 
+            <batchtest fork="yes">
+                <fileset dir="${src.dir}" includes="*Test.java"/>
+            </batchtest>
+        </junit>
+    </target>
     <target name="run" depends="jar">
         <java fork="true" classname="${main-class}" >
             <classpath>
